@@ -15,6 +15,8 @@ Unreleased -
   - fix crash in vpasswd, vadduser, vadddomain for very long password
   - add an error code for too short passwords (minimum size = 12)
   - in vadddomain() : reject no TLD or invalid size TLD, or two consecutive '.'
+  - change max size of user name and gecos to 64, and increase temporary buffer
+    in make_vpasswd_cdb to fix a crash after changing the user name size
 
 5.4.33 -
   Matt Brookings
